dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__frame_dispatch__same_peer_frames_batched.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=0
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=0
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.enq[p3]=5
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=5
0:00:00.000000000 [main] TRACE m#q.router_to_batcher.depth_dist[p3]=5
0:00:00.000000000 [main] TRACE m#task.priority_router.drained=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p3]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=4
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p3]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=3
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p3]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=2
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p3]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.receiver[p3]=1
0:00:00.000000000 [main] TRACE c#q.router_to_batcher.drain[p3]=1
0:00:00.000000000 [main] TRACE g#q.router_to_batcher.depth[p3]=0
0:00:00.000000000 [main] TRACE c#pick_two.chosen[send.0]=1
0:00:00.000000000 [main] TRACE m#task.frame_dispatch.drained=6
